--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "cross-env NODE_ENV=development webpack-dev-server",
-    "test": "cross-env NODE_ENV=test jest --config=jest.config.json"
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
+    "heroku-postbuild": "npm run build:prod",
+    "start": "node server/server.js"
   },
   "jest": {
     "collectCoverage": true,
